--- a/about.html
+++ b/about.html
@@ -24,57 +24,15 @@
 			<h1>ABOUT US</h1>
 			<hr>
 			<div class="ps">
-				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="200px" height="100px"></a>
-
-                
-
+				<a href="#p2"><img src="IMG_20200812_181546.jpg" width="500px" height="300px"></a>
+				<a href="#p2"><img src="IMG-20200624-WA0004.jpg" width="500px" height="300px"></a>
+				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="500px" height="300px"></a>
+				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="500px" height="300px"></a>
+				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="500px" height="300px"></a>
+                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="500px" height="300px"></a>
+				<a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="500px" height="300px"></a>
+                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="500px" height="300px"></a>
+                <a href="#p2"><img src="IMG-20200624-WA0007.jpg" width="500px" height="300px"></a>
 
 			</div>
 			
