--- a/about.html
+++ b/about.html
@@ -3,6 +3,8 @@
 <head>
     <title>ABOUT</title>
 	<link rel="stylesheet" type="text/css" href="about.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+
 </head>
 <body>
     <div id="myDIV"></div>
@@ -38,13 +40,28 @@
 			
 			<div class="inside_box" id=p1>
 				<hr>
-				<span class="name">Muhammed Nizam</span>
+				<span class="name">MUHAMMED NIZAM</span>
 				<span class="border"></span>
+				<br>
+				<br>
+				<br>
+				<br>
+				<div class="para">
 				<p>
-					 lionel messi is a football player.he has got 6 ballon'd'or award and he has also got the award for the best player of the year.His nationel team is argentina.He was born in 26 june 1986 in rosario,argentina.His main passion is to play football. he has many sponsorships like cococoala,pepsi,lays,adidas,nike ect...He is also known as the "goat".It means that 'Greatest Of All Time'.His club is barcelona.His jersy no is 10 
+					 Hi My dear Frnds,
+					 you are grandly welcome to my website,My name is Muhammed Nizam.I am studying at Kaoser English School,Kannur.I was born on MAY 30 2005 at Kannur.I am 15 years old.MY hobby is to play games,read comics,football,board games,etc...This is my official website made me by own.i have my own youtube channel known as "Mayniz".On my channel i have more than 1k+ Subscribers.I also have Facebook and Instagram account.I started my youtube courier at June 27 2020.I got 1k subscribers in 1 month with your love ans support.I will be uploading videos in my channel for entertaining you.the contents which i will be uploading will be cube My web series,solving,trolls,unboxing,comedy videos,tech talks,informations,movies,etc...
+                       <br>
+                       <br>
+                       <br>
+                       <br>
+                       <div class="qoute">
+					           "I THINK YOU EXPLORED ALL IN MY WEBSITE AND YOU ENJOYED"
+					           
+					   </div>
 			    </p>
-	   		</div>
-        </div>
+			    </div>
+	   </div>
+    </div>
 
 
 
