--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
            	 <li><a href="about.html">ABOUT</a></li>
            	 <li><a href="myvideos.html">MY VIDEOS</a></li>
            	 <li><a href="livesubcount.html">LIVE STATUS</a></li>
-           	 <li><a href="#">SOCIAL MEDIA</a></li>
+           	 <li><a href="socialmedia.html">SOCIAL MEDIA</a></li>
            </ul>
     	</div>
     	<div class="title">
