--- a/livesubcount.html
+++ b/livesubcount.html
@@ -31,72 +31,72 @@
                <script src="odometer.min.js"></script>
                <script type="text/javascript">
            setTimeout(function(){
-                 odometer.innerHTML = 1167;
+                 odometer.innerHTML = 1168;
            },);
                </script>
 
           <div class="a">
-          	<img src="Untitled.png">
+          	<a href="https://youtu.be/RrSyEaP4v4A"><img src="Untitled.png"></a>
           </div>
 
           <div class="b">
-          	<img src="maxresdefault (3).jpg">
+          	<a href="https://youtu.be/pZwb45yOhEc"><img src="maxresdefault (3).jpg"></a>
           </div>
 
           <div class="c">
-          	<img src="sddefault.jpg">
+          	<a href="https://youtu.be/idD9ZJEvy-I"><img src="maxresdefault.jpg"></a>
           </div>
 
           <div class="d">
-          	<img src="maxresdefault (1).jpg">
+          	<a href="https://youtu.be/1do0q9uD3us"><img src="sddefault.jpg"></a>
           </div>
 
           <div class="e">
-          	<img src="maxresdefault (5).jpg">
+          	<a href="https://youtu.be/qX3kFKFHxuw"><img src="maxresdefault (5).jpg"></a>
           </div>
 
           <div class="f">
-          	<img src="rubix211.jpg">
+          	<a href="https://youtu.be/sNGbh14kp6g"><img src="maxresdefault (1).jpg"></a>
           </div>
 
           <div class="g">
-          	<img src="maxresdefault (4).jpg">
+          	<a href="https://youtu.be/pE3xSw3Ad0k"></a><img src="maxresdefault (6).jpg">
           </div>
 
           <div class="h">
-          	<img src="maxresdefault.jpg">
+          	<a href="https://youtu.be/AWZQZ2V6sAc"><img src="maxresdefault (7).jpg"></a>
           </div>
 
            <div class="i">
-          	<img src="maxresdefault (5).jpg">
+          	<a href="https://youtu.be/iA-BVXsoYHA"><img src="maxresdefault (8).jpg"></a>
           </div>
 
           <div class="j">
-          	<img src="rubix211.jpg">
+          	<a href="https://youtu.be/m4ZubmYTIbQ"><img src="maxresdefault (4).jpg"></a>
           </div>
 
           <div class="k">
-          	<img src="maxresdefault (4).jpg">
+          	<a href="https://youtu.be/5o1G9nERmkU"><img src="moideen.jpg"></a>
           </div>
 
           <div class="l">
-          	<img src="maxresdefault.jpg">
+          	<a href="https://youtu.be/oc2jmbXJQ_M"><img src="rubix211.jpg"></a>
           </div>
 
            <div class="m">
-          	<img src="maxresdefault (5).jpg">
+          	<a href="https://youtu.be/8-nCXmImDC0"><img src="sddefault (1).jpg"></a>
           </div>
 
           <div class="n">
-          	<img src="rubix211.jpg">
+          	<a href="https://youtu.be/sE9d0Vm52WE"><img src="maxresdefault (2).jpg"></a>
           </div>
 
           <div class="o">
-          	<img src="maxresdefault (4).jpg">
+          	<a href="https://youtu.be/jqJNGaa8Zn0"><img src="jijo.png"></a>
           </div>
 
           <div class="p">
-          	<img src="maxresdefault.jpg">
+          	<a href="https://youtu.be/jZ_DlNu3snY"><img src="maxresdefault (9).jpg"></a>
           </div>
 
       </div>
