--- a/index.html
+++ b/index.html
@@ -1,29 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mayniz</title>
+	<title>Home page</title>
+	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+	<link href="https:font.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet" />
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="main">
-          <div class="logo">
-          	  <img src="nizam.jpg">
-          </div>
-           <ul>
-           	 <li class="active"><a href="#">HOME</a></li>
-           	 <li><a href="about.html">ABOUT</a></li>
-           	 <li><a href="myvideos.html">MY VIDEOS</a></li>
-           	 <li><a href="livesubcount.html">LIVE STATUS</a></li>
-           	 <li><a href="socialmedia.html">SOCIAL MEDIA</a></li>
-           </ul>
-    	</div>
-    	<div class="title">
+    
+    <div class="title">
     		<h1>Mayniz</h1>
     	</div>
-    	<div class="button">
+
+     <div class="container-fluid banner">
+     	<div class="row">
+     		<div class="col-md-12">
+     		  <nav class="navbar navbar-md">
+     			<div class="navbar-brand">SPITAL</div>
+
+     			<ul class="nav">
+
+     			   <li class="nav-item">
+     			      <a class="nav-link" href="#">HOME</a>
+     			   </li>
+
+     			   <li class="nav-item">
+     			      <a class="nav-link" href="#">ABOUT</a>
+     			   </li>
+
+     			   <li class="nav-item">
+     			      <a class="nav-link" href="#">MY VIDEOS</a>
+     			   </li>
+
+     			   <li class="nav-item">
+     			      <a class="nav-link" href="#">LIVE STATUS</a>
+     			   </li>
+
+     			   <li class="nav-item">
+     			      <a class="nav-link" href="#">SOCIAL MEDIA</a>
+     			   </li>
+
+     			</ul>
+     		  </nav>	
+     		</div>
+     	</div>
+     </div>
+    
+        <div class="button">
     		<a href="explore.html" class="btn">EXPLORE</a>
     	</div>
-    </header>   
+
 </body>
 </html>
