--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
      			<ul class="nav">
 
      			   <li class="nav-item">
-     			      <a class="nav-link" href="#">HOME</a>
+     			      <a class="active" href="#">HOME</a>
      			   </li>
 
      			   <li class="nav-item">
-     			      <a class="nav-link" href="#">ABOUT</a>
+     			      <a class="nav-link" href="about.css">ABOUT</a>
      			   </li>
 
      			   <li class="nav-item">
-     			      <a class="nav-link" href="#">MY VIDEOS</a>
+     			      <a class="nav-link" href="myvideos.css">MY VIDEOS</a>
      			   </li>
 
      			   <li class="nav-item">
-     			      <a class="nav-link" href="#">LIVE STATUS</a>
+     			      <a class="nav-link" href="livesubcount.css">LIVE STATUS</a>
      			   </li>
 
      			   <li class="nav-item">
-     			      <a class="nav-link" href="#">SOCIAL MEDIA</a>
+     			      <a class="nav-link" href="socialmedia.css">SOCIAL MEDIA</a>
      			   </li>
 
      			</ul>
