--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
      			   </li>
 
      			   <li class="nav-item">
-     			      <a class="nav-link" href="about.css">ABOUT</a>
+     			      <a class="nav-link" href="about.html">ABOUT</a>
      			   </li>
 
      			   <li class="nav-item">
-     			      <a class="nav-link" href="myvideos.css">MY VIDEOS</a>
+     			      <a class="nav-link" href="myvideos.html">MY VIDEOS</a>
      			   </li>
 
      			   <li class="nav-item">
-     			      <a class="nav-link" href="livesubcount.css">LIVE STATUS</a>
+     			      <a class="nav-link" href="livesubcount.html">LIVE STATUS</a>
      			   </li>
 
      			   <li class="nav-item">
-     			      <a class="nav-link" href="socialmedia.css">SOCIAL MEDIA</a>
+     			      <a class="nav-link" href="socialmedia.html">SOCIAL MEDIA</a>
      			   </li>
 
      			</ul>
