--- a/index.html
+++ b/index.html
@@ -1,54 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home page</title>
-	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-	<link href="https:font.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet" />
-	<link rel="stylesheet" type="text/css" href="style.css">
+  <title>Home page</title>
+  <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link href="https:font.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     
     <div class="title">
-    		<h1>Mayniz</h1>
-    	</div>
+        <h1>Mayniz</h1>
+      </div>
 
      <div class="container-fluid banner">
-     	<div class="row">
-     		<div class="col-md-12">
-     		  <nav class="navbar navbar-md">
-     			<div class="navbar-brand">SPITAL</div>
+      <div class="row">
+        <div class="col-md-12">
+          <nav class="navbar navbar-md">
+          <div class="navbar-brand">SPITAL</div>
 
-     			<ul class="nav">
+          <ul class="nav">
 
-     			   <li class="nav-item">
-     			      <a class="active" href="#">HOME</a>
-     			   </li>
+             <li class="nav-item">
+                <a class="nav-link" href="about.html">ABOUT</a>
+             </li>
 
-     			   <li class="nav-item">
-     			      <a class="nav-link" href="about.html">ABOUT</a>
-     			   </li>
+             <li class="nav-item">
+                <a class="nav-link" href="myvideos.html">MY VIDEOS</a>
+             </li>
 
-     			   <li class="nav-item">
-     			      <a class="nav-link" href="myvideos.html">MY VIDEOS</a>
-     			   </li>
+             <li class="nav-item">
+                <a class="nav-link" href="livesubcount.html">LIVE STATUS</a>
+             </li>
 
-     			   <li class="nav-item">
-     			      <a class="nav-link" href="livesubcount.html">LIVE STATUS</a>
-     			   </li>
+             <li class="nav-item">
+                <a class="nav-link" href="socialmedia.html">SOCIAL MEDIA</a>
+             </li>
 
-     			   <li class="nav-item">
-     			      <a class="nav-link" href="socialmedia.html">SOCIAL MEDIA</a>
-     			   </li>
-
-     			</ul>
-     		  </nav>	
-     		</div>
-     	</div>
+          </ul>
+          </nav>  
+        </div>
+      </div>
      </div>
     
         <div class="button">
-    		<a href="explore.html" class="btn">EXPLORE</a>
-    	</div>
+           <a href="explore.html" class="btn">EXPLORE</a>
+        </div>
+
+        <div class="click">
+          <a href="#" class="clk">HOME</a> 
+        </div>
+
+
 
 </body>
 </html>
