--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 		<div class="row">
 		<div class="col-md-5">
 			<div class="about-img">
-            
+
             <img class="man" src="output-onlinepngtools (5).png" width="500px" height="500px" alt="">
              <img class="shape" src="about_tringle.png" alt="">
 
@@ -32,7 +32,7 @@
 		</div>
 		<br>
 		<div class="col-md-7 about-right">
-			
+
 			<h2 class="color-3"><b>MUHAMMED NIZAM</b>
 			</h2>
 			
@@ -71,8 +71,13 @@
 	 
 		</div>
 	</div>
-  
+
+       <div class="click">
+                      <a href="index.html" class="clk">HOME</a>
+                 </div>
+
  	</section>
  	 
+
  </body>
  </html>
