--- a/myvideos.html
+++ b/myvideos.html
@@ -11,6 +11,15 @@ body {font-family: Verdana, sans-serif;}
 .mySlides {display: none;}
 img {vertical-align: middle;}
 
+@viewport {
+  zoom: 1.0;
+  width: extend-to-zoom;
+}
+
+@-ms-viewport {
+  zoom: 1.0;
+  width: extend-to-zoom;
+}
 
 /* Slideshow container */
 .slideshow-container {
@@ -117,12 +126,13 @@ function showSlides() {
 </script>
  <div class="topnav">
     <a class="active" href="#home">MY VIDEOS</a> 
+    <a href="index.html" class="btn">HOME</a>
  </div> 
 
-
+<!-- 
       <div class="button">
-        <a href="index.html" class="btn">HOME</a>
-      </div>
+        
+      </div> -->
 
 
 <br>
@@ -154,8 +164,8 @@ function showSlides() {
 <br>
 <br>
  <!--  <div class="video"> -->
-       <iframe width="605" height="300" src="https://youtube.com/embed/jqJNGaa8Zn0">
-       </iframe>
+       <!-- <iframe width="605" height="300" src="https://youtube.com/embed/jqJNGaa8Zn0">
+       </iframe> -->
        
        <iframe width="605" height="300" src="https://youtube.com/embed/jqJNGaa8Zn0">
        </iframe>
