--- a/myvideos.html
+++ b/myvideos.html
@@ -1,91 +1,111 @@
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-  margin-left: -10px;
-}
+<!DOCTYPE html>
+<html>
+<head>
+  <title>subscriberscount</title>
+  <link rel="stylesheet" type="text/css" href="livesubcount.css">
+  <link rel="stylesheet" href="odometer-theme-car.css">
+</head>
+<body background="Image-Community-header-background-YouTube-Romania-.jpg">
+   <div>    
+    <div class="heading">
+      <h1>LIVE STATUS</h1>
+    </div>
 
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 30px;
-  width: 100%;
-  font-weight: bold;
-}
+        <div class="button">
+      <a href="index.html" class="btn">HOME</a>
+      </div>
+        
+            <div class="imgBx">
+              <img src="nizam.jpg" width="200px" height="200px">
+           </div>
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
+      <div>
 
-.topnav a.active {
-  background-color: #CBCBCB;
-  color: white;
-}
+           <br>
+           <br>
+           <br>
+           <div id="odometer" class="odometer">0000</div>
+           <h2>SUBSCRIBERS</h2>
+           </div>
 
-.video{
-  margin-left: 1.5%;
-  margin-right:1.5%;
-  margin-top: 30px;
-  margin-bottom: 40px;
-}
+               <script src="odometer.min.js"></script>
+               <script type="text/javascript">
+           setTimeout(function(){
+                 odometer.innerHTML = 1168;
+           },);
+               </script>
 
-.body {
-  font-family: "Sofia";
-  font-size: 22px;
-}
+          <div class="a">
+            <a href="https://youtu.be/RrSyEaP4v4A"><img src="Untitled.png"></a>
+          </div>
 
-/*.marque{
-  font-size: 40px;
-}*/
+          <div class="b">
+            <a href="https://youtu.be/pZwb45yOhEc"><img src="maxresdefault (3).jpg"></a>
+          </div>
 
-.marque {
-  font-family: Comic Sans MS;
-  font-style: italic;
-  width: 90%;
-  margin: 0 auto;
-  text-align: center;
-  color: #313131;
-  font-size: 45px;
-  font-weight: bold;
-  position: absolute;
-  -webkit-animation: colorchange 3s infinite alternate;
-}
+          <div class="c">
+            <a href="https://youtu.be/idD9ZJEvy-I"><img src="maxresdefault.jpg"></a>
+          </div>
 
-@-webkit-keyframes colorchange {
-  0% {
-    color: blue;
-  }
-  10% {
-    color: #8e44ad;
-  }
-  20% {
-    color: #1abc9c;
-  }
-  30% {
-    color: #d35400;
-  }
-  40% {
-    color: blue;
-  }
-  50% {
-    color: #34495e;
-  }
-  60% {
-    color: blue;
-  }
-  70% {
-    color: #2980b9;
-  }
-  80% {
-    color: #f1c40f;
-  }
-  90% {
-    color: #2980b9;
-  }
-  100% {
-    color: pink;
-  }
-}
+          <div class="d">
+            <a href="https://youtu.be/1do0q9uD3us"><img src="sddefault.jpg"></a>
+          </div>
+
+          <div class="e">
+            <a href="https://youtu.be/qX3kFKFHxuw"><img src="maxresdefault (5).jpg"></a>
+          </div>
+
+          <div class="f">
+            <a href="https://youtu.be/sNGbh14kp6g"><img src="maxresdefault (1).jpg"></a>
+          </div>
+
+          <div class="g">
+            <a href="https://youtu.be/pE3xSw3Ad0k"></a><img src="maxresdefault (6).jpg">
+          </div>
+
+          <div class="h">
+            <a href="https://youtu.be/AWZQZ2V6sAc"><img src="maxresdefault (7).jpg"></a>
+          </div>
+
+           <div class="i">
+            <a href="https://youtu.be/iA-BVXsoYHA"><img src="maxresdefault (8).jpg"></a>
+          </div>
+
+          <div class="j">
+            <a href="https://youtu.be/m4ZubmYTIbQ"><img src="maxresdefault (4).jpg"></a>
+          </div>
+
+          <div class="k">
+            <a href="https://youtu.be/5o1G9nERmkU"><img src="moideen.jpg"></a>
+          </div>
+
+          <div class="l">
+            <a href="https://youtu.be/oc2jmbXJQ_M"><img src="rubix211.jpg"></a>
+          </div>
+
+           <div class="m">
+            <a href="https://youtu.be/8-nCXmImDC0"><img src="sddefault (1).jpg"></a>
+          </div>
+
+          <div class="n">
+            <a href="https://youtu.be/sE9d0Vm52WE"><img src="maxresdefault (2).jpg"></a>
+          </div>
+
+          <div class="o">
+            <a href="https://youtu.be/jqJNGaa8Zn0"><img src="jijo.png"></a>
+          </div>
+
+          <div class="p">
+            <a href="https://youtu.be/jZ_DlNu3snY"><img src="maxresdefault (9).jpg"></a>
+          </div>
+
+      </div>
+    </div> 
+  </body>
+</html>
+
+
+
+
+<!-- <div class="boss">
+</div> -->
