--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
              </li>
 
              <li class="nav-item">
-                <a class="nav-link" href="socialmedia.html">SOCIAL MEDIA</a>
+                <a class="nav-link" href="#">SOCIAL MEDIA</a>
              </li>
 
           </ul>
