--- a/socialmedia.html
+++ b/socialmedia.html
@@ -21,7 +21,7 @@
      	     		   <p class="role">Facebook Account</p>
      	     		   <br>
      	     		 <!--   <br> -->
-     	     		     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt  mollit anim id est laborum.</p>
+     	     		     <p>Hi frnds i have a facebook account.in that i will be updating u with my new videos and my latest feuteristic info and creations.so guys if u need to contact u can message through the facebook and also u can ask any doubts and u can comment for ur favourite topic to be uploaded in my channel.So pls guys don't forget to follow my account.</p>
      	     	</div>
         
                 <div class="team_member">
@@ -32,7 +32,7 @@
      	     		   <p class="role">Youtube Channel</p>
      	     		   <br>
      	     		   <!-- <br> -->
-     	     		     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt  mollit anim id est laborum.</p>
+     	     		     <p>Hlo guys there's nothing i love in the world more than hearing from you about my career and supporting me.guys i have an youtube channel.so frnds if u want any content to be uploaded which you like you are free to suggest in comment box.So my dear frnds till now if you didn't SUBSCRIBE my channel pls subscribe now & click the bell icon for notifications.</p>
      	     	</div>
 
      	     	<div class="team_member">
@@ -43,7 +43,7 @@
      	     		   <p class="role">Instagram Account</p>
      	     		   <br>
      	     		  <!--  <br> -->
-     	     		     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+     	     		     <p>Frnds i have an instagram account.in that i will be updating info avbout my youtube channel and my creations.Frnds u are free to share my updates and like and comment.so guys till now if you didn't follow my instagram account.Pls follow now and stay tuned with my updates.</p>
      	     	</div>	
 
      	     	<div class="team_member">
@@ -54,7 +54,7 @@
      	     		  <p class="role">Whatsapp Contact</p>
      	     		  <br>
      	     		   <!-- <br> -->
-     	     		    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+     	     		    <p>Guys if u need to contact me or message me about doubts or u can also share ur creative contents to me,and also u are free to call me at any time.i have a whtasapp number throught that u can chat with me and share ur ideas and clear ur doubts.so guys be innovative and stay tuned.</p>
      	     	</div>	
                  <div class="button">
     		          <a href="index.html" class="btn">HOME</a>
