--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
  <html lang="en">
  <head>
  	<meta charset="UTF-8">
- 	<title>amazing section</title>
+ 	<title>ABOUT ME</title>
  	
  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
  	
