--- a/socialmedia.html
+++ b/socialmedia.html
@@ -32,7 +32,7 @@
      	     		   <p class="role">Youtube Channel</p>
      	     		   <br>
      	     		   <!-- <br> -->
-     	     		     <p>Hlo guys there's nothing i love in the world more than hearing from you about my career and supporting me.guys i have an youtube channel.so frnds if u want any content to be uploaded which you like you are free to suggest in comment box.So my dear frnds till now if you didn't SUBSCRIBE my channel pls subscribe now & click the bell icon for notifications.</p>
+     	     		     <p>Hlo guys there's nothing i love in the world more than hearing from you about about my career and supporting me.guys i have an youtube channel.so frnds if u want any content to be uploaded which you like you are free to suggest in comment box.So my dear frnds till now if you didn't SUBSCRIBE my channel pls subscribe now & click the bell icon for notifications.</p>
      	     	</div>
 
      	     	<div class="team_member">
