--- a/about.html
+++ b/about.html
@@ -3,12 +3,14 @@
  <html lang="en">
  <head>
  	<meta charset="UTF-8">
- 	<title>ABOUT ME</title>
+ 	<title>amazing section</title>
  	
  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
  	
  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  	<link rel="stylesheet" type="text/css" href="about.css">
+
+ 	<link rel = "icon" href = "nizam.jpg">
 
  </head>
  <body><br>
