--- a/index.html
+++ b/index.html
@@ -1,3 +1,42 @@
+<!-- <!DOCTYPE html>
+<html>
+<head>
+	<title>Mayniz</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <header>
+        <div class="main">
+          <div class="logo">
+          	  <img src="nizam.jpg">
+          	  <a href="https://www.youtube.com/channel/UCLsMi49V_NRdwAZddxV19Zg?view_as=subscriber"><img src="nizam.jpg"></a>
+          </div>
+           <ul>
+           	 <li class="active"><a href="#">HOME</a></li>
+           	 <li><a href="about.html">ABOUT</a></li>
+           	 <li><a href="myvideos.html">MY VIDEOS</a></li>
+           	 <li><a href="livesubcount.html">LIVE STATUS</a></li>
+           	 <li><a href="socialmedia.html">SOCIAL MEDIA</a></li>
+           </ul>
+    	</div>
+    	<div class="title">
+    		<h1>Mayniz</h1>
+    	</div>
+    	<div class="button">
+    		<a href="explore.html" class="btn">EXPLORE</a>
+    	</div>
+    </header>   
+</body>
+</html>  -->
+
+
+
+
+
+
+
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,6 +44,7 @@
   <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
   <link href="https:font.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel = "icon" href = "nizam.jpg"> 
 </head>
 <body>
     
@@ -45,6 +85,12 @@
         <div class="button">
            <a href="explore.html" class="btn">EXPLORE</a>
         </div>
+
+        <div class="click">
+          <a href="#" class="clk">HOME</a> 
+        </div>
+
+
 
 </body>
 </html>
