--- a/socialmedia.html
+++ b/socialmedia.html
@@ -1,65 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="socialmedia.css">
-	<title>SOCIAL MEDIA</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="socialmedia.css">
+    
+    <link rel = "icon" href = "nizam.jpg">
+
+    <title>SOCIAL MEDIA</title>
 </head>                
 <body background="social-media-icon-pattern-background-wallpaper-white-icons-vector-ai-file-version-illustration-contains-116684686.jpg">                 
 
     <div class="wrapper">
-     	<h1>SOCIAL MEDIA</h1>
-     	<br>
-     	<br>
-     	    <div class="team">
+        <h1>SOCIAL MEDIA</h1>
+        <br>
+        <br>
+            <div class="team">
 
-     	     	<div class="team_member">
-     	     		<div class="team_image">
-     	     			<a href="https://www.facebook.com/muhammed.nizam.9003"><img src="unddnamed.png"></a>
-     	     		</div>
-     	     		<h3>Muhammed Nizam</h3> 
-     	     		   <p class="role">Facebook Account</p>
-     	     		   <br>
-     	     		 <!--   <br> -->
-     	     		     <p>Hi frnds i have a facebook account.in that i will be updating u with my new videos and my latest feuteristic info and creations.so guys if u need to contact u can message through the facebook and also u can ask any doubts and u can comment for ur favourite topic to be uploaded in my channel.So pls guys don't forget to follow my account.</p>
-     	     	</div>
+                <div class="team_member">
+                    <div class="team_image">
+                        <a href="https://www.facebook.com/muhammed.nizam.9003"><img src="unddnamed.png"></a>
+                    </div>
+                    <h3>Muhammed Nizam</h3> 
+                       <p class="role">Facebook Account</p>
+                       <br>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt  mollit anim id est laborum.</p>
+                </div>
         
                 <div class="team_member">
-     	     		<div class="team_img">
-     	     		<a href="https://www.youtube.com/channel/UCLsMi49V_NRdwAZddxV19Zg/"><img src="youtube-round-icon-png-4.jpg" width="100px" height="100px"></a>	
-     	     		</div>
-     	     		<h3>Mayniz</h3> 
-     	     		   <p class="role">Youtube Channel</p>
-     	     		   <br>
-     	     		   <!-- <br> -->
-     	     		     <p>Hlo guys there's nothing i love in the world more than hearing from you about about my career and supporting me.guys i have an youtube channel.so frnds if u want any content to be uploaded which you like you are free to suggest in comment box.So my dear frnds till now if you didn't SUBSCRIBE my channel pls subscribe now & click the bell icon for notifications.</p>
-     	     	</div>
+                    <div class="team_img">
+                    <a href="https://www.youtube.com/channel/UCLsMi49V_NRdwAZddxV19Zg/"><img src="youtube-round-icon-png-4.jpg" width="100px" height="100px"></a>   
+                    </div>
+                    <h3>Mayniz</h3> 
+                       <p class="role">Youtube Channel</p>
+                       <br>
 
-     	     	<div class="team_member">
-     	     		<div class="team_img">
-     	     			<a href="https://www.instagram.com/mayniz_/"><img src="instagram-round-icon-png-16.jpg" width="100px" height="100px"></a>
-     	     		</div>
-     	     	    <h3>mayniz_</h3>
-     	     		   <p class="role">Instagram Account</p>
-     	     		   <br>
-     	     		  <!--  <br> -->
-     	     		     <p>Frnds i have an instagram account.in that i will be updating info avbout my youtube channel and my creations.Frnds u are free to share my updates and like and comment.so guys till now if you didn't follow my instagram account.Pls follow now and stay tuned with my updates.</p>
-     	     	</div>	
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt  mollit anim id est laborum.</p>
+                </div>
 
-     	     	<div class="team_member">
-     	     		<div class="team_img">
-     	     			<img src="whatsapp-1653084-1402372.webp"  width="100px" height="100px" alt="team_member_image">
-     	     		</div>
-     	     	    <h3>+91 85907 22823</h3>
-     	     		  <p class="role">Whatsapp Contact</p>
-     	     		  <br>
-     	     		   <!-- <br> -->
-     	     		    <p>Guys if u need to contact me or message me about doubts or u can also share ur creative contents to me,and also u are free to call me at any time.i have a whtasapp number throught that u can chat with me and share ur ideas and clear ur doubts.so guys be innovative and stay tuned.</p>
-     	     	</div>	
+                <div class="team_member">
+                    <div class="team_img">
+                        <a href="https://www.instagram.com/mayniz_/"><img src="instagram-round-icon-png-16.jpg" width="100px" height="100px"></a>
+                    </div>
+                    <h3>mayniz_</h3>
+                       <p class="role">Instagram Account</p>
+                       <br>
+                      <!--  <br> -->
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>  
+
+                <div class="team_member">
+                    <div class="team_img">
+                        <img src="whatsapp-1653084-1402372.webp"  width="100px" height="100px" alt="team_member_image">
+                    </div>
+                    <h3>+91 85907 22823</h3>
+                      <p class="role">Whatsapp Contact</p>
+                      <br>
+                       <!-- <br> -->
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>  
                  <div class="button">
-    		          <a href="index.html" class="btn">HOME</a>
-    	         </div>
-     	    </div>
+                      <a href="index.html" class="btn">HOME</a>
+                 </div>
+            </div>
     </div>
 
 </body>
